[project]
name = "jhg-patterns-workspace"
version = "0.1.0"
description = "Development workspace for JHG patterns packages"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "James Dowzard", email = "james.dowzard@jhg.com.au" }]
dependencies = [
    "jhg-patterns-flask",
    "jhg-patterns-web",
    "jhg-patterns-databricks",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.uv]
dev-dependencies = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
jhg-patterns-flask = { workspace = true }
jhg-patterns-web = { workspace = true }
jhg-patterns-databricks = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
